# saorsa-deploy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
resources/digitalocean/: variables.tf
saorsa_deploy/: binary_source.py  bootstrap.py  build_droplet.py  executor.py  main.py  providers.py  resources.py  state.py  terraform.py
saorsa_deploy/cmd/: build.py  destroy.py  infra.py  provision.py  provision_genesis.py
saorsa_deploy/provisioning/: build.py  genesis.py  node.py
saorsa_deploy/resources/aws-build-infra/: main.tf  outputs.tf  variables.tf  versions.tf
saorsa_deploy/resources/digitalocean/: main.tf  outputs.tf  variables.tf  versions.tf
scripts/: release.py
tests/: test_binary_source.py  test_binary_source_resolution.py  test_build.py  test_build_droplet.py  test_providers.py  test_provision.py  test_provision_genesis.py  test_state.py  test_terraform.py
